force-app/main/default/objects/Activity/fields/Check_Out_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Latitude__c</fullName>
    <description>Check Out Latitude</description>
    <label>Check Out Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>