force-app/main/default/objects/Activity/fields/CTI_Call_Time_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>CTI_Call_Time_Elapsed__c</fullName>
    <description>Field needed for Genesys CTI requirement as part of Jira SFHS-20 (Hospitality Service Cloud)</description>
    <label>Call Time Elapsed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>