force-app/main/default/objects/Activity/fields/CTI_Connected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CTI_Connected_Date_Time__c</fullName>
    <description>Field needed for Genesys CTI requirement as part of Jira SFHS-20 (Hospitality Service Cloud)</description>
    <label>Connected Date Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>