force-app/main/default/objects/Activity/fields/CTI_Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>CTI_Participant_Id__c</fullName>
    <description>Field needed for Genesys CTI requirement as part of Jira SFHS-20 (Hospitality Service Cloud)</description>
    <externalId>true</externalId>
    <label>Participant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>