force-app/main/default/objects/Activity/fields/CTI_Participant_Purpose__c.field-meta.xml
<CustomField>
    <fullName>CTI_Participant_Purpose__c</fullName>
    <description>Field needed for Genesys CTI requirement as part of Jira SFHS-20 (Hospitality Service Cloud)</description>
    <label>Participant Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>