force-app/main/default/objects/Activity/fields/CTI_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>CTI_Queue_Name__c</fullName>
    <description>Field needed for Genesys CTI requirement as part of Jira SFHS-20 (Hospitality Service Cloud)</description>
    <externalId>true</externalId>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>