force-app/main/default/objects/Activity/fields/CTI_Total_ACD_Time__c.field-meta.xml
<CustomField>
    <fullName>CTI_Total_ACD_Time__c</fullName>
    <description>Field needed for Genesys CTI requirement as part of Jira SFHS-20 (Hospitality Service Cloud)</description>
    <label>Total ACD Time (seconds)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>