force-app/main/default/objects/Activity/fields/Distance_from_Lead_Check_Out_mi__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Lead_Check_Out_mi__c</fullName>
    <label>Distance from Lead Check Out (mi)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>