force-app/main/default/objects/Activity/fields/Include_in_Smart_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Smart_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Smart Sheet</label>
    <type>Checkbox</type>
</CustomField>