force-app/main/default/objects/Activity/fields/MGR_Approved__c.field-meta.xml
<CustomField>
    <fullName>MGR_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field for Brett Kelly to track approval of events.</description>
    <label>MGR Approved</label>
    <type>Checkbox</type>
</CustomField>