force-app/main/default/objects/Activity/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <label>Offer Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>