force-app/main/default/objects/Activity/fields/Opportunity_Upsell_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Upsell_Type__c</fullName>
    <label>Opportunity Upsell Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Unattached TS</fullName>
            </value>
            <value>
                <fullName>Backbilling</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>